[gd_scene load_steps=12 format=3 uid="uid://0phnbqapnxwp"]

[ext_resource type="Script" path="res://npc/npc.gd" id="1_hjq2d"]
[ext_resource type="PackedScene" uid="uid://ctc48s6nmiom3" path="res://components/health_component.tscn" id="2_1tw0k"]
[ext_resource type="Texture2D" uid="uid://lgt3de24n4j" path="res://npc/Boy/SpriteSheet.png" id="2_f6r7n"]
[ext_resource type="PackedScene" uid="uid://dsbuqlt6yb7a8" path="res://components/hitbox_component.tscn" id="3_ppltn"]
[ext_resource type="PackedScene" uid="uid://dyb73gwdeh1c2" path="res://components/hurtbox_component.tscn" id="4_6s0pm"]
[ext_resource type="Script" path="res://components/StateMachine.gd" id="5_gqd5q"]
[ext_resource type="Script" path="res://npc/states/NPCIdle.gd" id="7_4d22w"]
[ext_resource type="Script" path="res://npc/states/NPCFollow.gd" id="8_ivhmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kvgn"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naac7"]
size = Vector2(24, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tfwx"]
size = Vector2(24, 37)

[node name="NPC" type="CharacterBody2D" groups=["player"]]
position = Vector2(300, 300)
script = ExtResource("1_hjq2d")
speed = 80

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_f6r7n")
hframes = 4
vframes = 7

[node name="HealthComponent" parent="." instance=ExtResource("2_1tw0k")]

[node name="HitboxComponent" parent="." instance=ExtResource("3_ppltn")]

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-1, 13)
shape = SubResource("RectangleShape2D_7kvgn")
debug_color = Color(0.454902, 0.592157, 0.113725, 0.419608)

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_6s0pm")]
health_component = NodePath("../HealthComponent")

[node name="Hurtbox" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_naac7")
debug_color = Color(0.988235, 0.0862745, 0.180392, 0.419608)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_gqd5q")
initial_state = NodePath("NPCIdle")

[node name="NPCIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("npc")]
script = ExtResource("7_4d22w")
npc = NodePath("../..")

[node name="NPCTalking" type="Node" parent="StateMachine" node_paths=PackedStringArray("npc")]
script = ExtResource("8_ivhmp")
npc = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3tfwx")

[connection signal="hit" from="HealthComponent" to="." method="_on_health_component_hit"]
[connection signal="killed" from="HealthComponent" to="." method="_on_health_component_killed"]
